@@ -93,6 +93,7 @@ the tests succeed.
   <li>netware (for Novell NetWare)</li>
   <li>os/2 (for OS/2)</li>
   <li>win9x for Microsoft Windows 95 and 98</li>
+  <li>z/os for z/OS and OS/390</li>
 </ul>
 
 <h4>equals</h4>
