@@ -231,6 +231,9 @@ public class Execute {
                 String[] cmd = {"command.com", "/c", "set" };
                 return cmd;
             }
+        } else if (Os.isFamily("z/os")) {
+            String[] cmd = {"/bin/env"};
+            return cmd;
         } else if (Os.isFamily("unix")) {
             // Generic UNIX
             // Alternatively one could use: /bin/sh -c env
